--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-nextjs-toast": "^1.2.5",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "use-dynamic-refs": "^1.0.0"
   },
   "devDependencies": {
