--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-player": "^2.10.1",
-    "tailwind-scrollbar-hide": "^1.1.7",
-    "use-dynamic-refs": "^1.0.0"
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
